Estilos de showOrder terminado

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -60,6 +60,7 @@
             </ul>
             <ul class="header-links pull-right">
                 <li><a href="#"><i class="fa fa-dollar"></i>RD</a></li>
+                <li><a href="/orders" class="orders-button"><i class="fa fa-archive"></i> Mis pedidos</a></li>
                 <% if (usuario) { %>
                     <li><a href="/account"><i class="fa fa-user-o"></i>Hola, <%= usuario.username.toUpperCase() %></a></li>
                     <li>
