--- a/src/views/store/orderDetails.ejs
+++ b/src/views/store/orderDetails.ejs
@@ -1,9 +1,10 @@
-     <%- include('../partials/header.ejs') %>
+<%- include('../partials/header.ejs') %>
+
+<html>
+<link rel="stylesheet" href="/css/orderDetails.css">
+</html>
 
 </head>
-
-<link rel="stylesheet" href="/css/orderDetails.css">
-
 <body>
 
     <div class="container-details">
