Pagos con debito y credito

--- a/public/css/orderDetails.css
+++ b/public/css/orderDetails.css
@@ -110,10 +110,10 @@
     background-color: #28a745;
 }
 
-.badge-warning-details {
+/* .badge-warning-details {
     background-color: #ffc107;
     color: #333;
-}
+} */
 
 .table-details {
     width: 100%;
