--- a/src/views/store/order.ejs
+++ b/src/views/store/order.ejs
@@ -104,21 +104,10 @@
 					</div>
 					<div class="payment-method">
 						<div class="input-radio">
-							<input type="radio" name="payment" id="payment-1">
-							<label for="payment-1">
-								<span></span>
-								Tarjetas de crédito y débito
-							</label>
-							<div class="caption">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-									incididunt ut labore et dolore magna aliqua.</p>
-							</div>
-						</div>
-						<div class="input-radio">
 							<input type="radio" name="payment" id="payment-3">
 							<label for="payment-3">
 								<span></span>
-								Paypal
+								Paypal o Tarjeta
 							</label>
 							<div class="caption">
 								<p>PayPal garantiza un pago rápido y seguro. Serás redirigido a su plataforma para completar tu compra.</p>
@@ -133,7 +122,6 @@
 							He leído y acepto las <a href="/conditions">Políticas y Condiciones</a>
 						</label>
 					</div>
-					<a href="#" class="primary-btn order-submit">Realizar Pedido</a>
 				</div>
 				<!-- /Order Details -->
 			</div>
