--- a/public/css/style.css
+++ b/public/css/style.css
@@ -285,7 +285,7 @@ textarea.input {
 }
 
 .input-radio input[type="radio"]:checked~.caption, .input-checkbox input[type="checkbox"]:checked~.caption {
-  max-height: 800px;
+  max-height: none;
 }
 
 /*----------------------------*\
