--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -102,7 +102,7 @@
 							<div class="add-to-cart">
 								<button class="add-to-cart-btn" id="add-to-cart-btn" data-id="<%= producto.id %>"
 									data-nombre="<%= producto.nombre %>" data-precio="<%= producto.precio %>"
-									data-descuento="<%= producto.descuento %>" data-stock="<%= stocksPorColor %>"
+									data-descuento="<%= producto.descuento %>" data-stock="<%= producto.stock %>"
 									data-color="<%= colorSeleccionado %>">
 									<i class="fa fa-shopping-cart"></i> Añadir al carrito
 								</button>
