Order y pay unificado y stock validado y arreglado al agregar items

--- a/src/views/store/orderDetails.ejs
+++ b/src/views/store/orderDetails.ejs
@@ -39,7 +39,6 @@
                 </div>
             </div>
         </div>
-
         <div class="card-details">
             <div class="card-header-details">
                 <h4>Productos</h4>
@@ -79,7 +78,7 @@
             </div>
           </div>
         </div>
-        <a href="/orders" class="btn-details">Volver a mis pedidos</a>
+        <a href="/api/order/showOrders" class="btn-details">Volver a mis pedidos</a>
     </div>
 
     <%- include('../partials/footer.ejs') %>
