--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -60,39 +60,39 @@
             </ul>
             <ul class="header-links pull-right">
                 <li><a href="#"><i class="fa fa-dollar"></i>RD</a></li>
-                <li><a href="/orders" class="orders-button"><i class="fa fa-archive"></i> Mis pedidos</a></li>
+                <li><a href="/api/order/showOrders" class="orders-button"><i class="fa fa-archive"></i> Mis pedidos</a></li>
                 <% if (usuario) { %>
                     <li><a href="/account"><i class="fa fa-user-o"></i>Hola, <%= usuario.username.toUpperCase() %></a></li>
-                    <li>
-                        <form id="logout-form" action="/api/auth/logout" method="POST" style="display: none;"></form>
-                        <a href="#" onclick="document.getElementById('logout-form').submit();">
-                            <i class="fa fa-sign-out"></i> Cerrar Sesión
-                        </a>
-                    </li>
-                    <% } else { %>
-                        <li><a href="/login"><i class="fa fa-sign-in"></i> Iniciar Sesión</a></li>
-                        <li><a href="/register"><i class="fa fa-user-plus"></i> Registrarse</a></li> 
-                        <% } %>
-                    </ul>
-                </div>
-            </div>
-            <!-- /TOP HEADER -->
+                <li>
+                <form id="logout-form" action="/api/auth/logout" method="POST" style="display: none;"></form>
+                <a href="#" onclick="document.getElementById('logout-form').submit();">
+                    <i class="fa fa-sign-out"></i> Cerrar Sesión
+                </a>
+            </li>
+            <% } else { %>
+                <li><a href="/login"><i class="fa fa-sign-in"></i> Iniciar Sesión</a></li>
+                <li><a href="/register"><i class="fa fa-user-plus"></i> Registrarse</a></li> 
+                <% } %>
+            </ul>
+        </div>
+    </div>
+    <!-- /TOP HEADER -->
 
-<!-- MAIN HEADER -->
-<div id="header">
-    <!-- container -->
-    <div class="container">
-        <!-- row -->
-        <div class="row">
-            <!-- LOGO -->
-            <div class="col-md-3">
-                <div class="header-logo">
-                    <a href="/" class="logo">
-                        <img src="/img/lavegatech-logo.png" alt="">
-                    </a>
+    <!-- MAIN HEADER -->
+    <div id="header">
+        <!-- container -->
+        <div class="container">
+            <!-- row -->
+            <div class="row">
+                <!-- LOGO -->
+                <div class="col-md-3">
+                    <div class="header-logo">
+                        <a href="/" class="logo">
+                            <img src="/img/lavegatech-logo.png" alt="">
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <!-- /LOGO -->
+                <!-- /LOGO -->
               
                 <!-- SEARCH BAR -->
                 <div class="col-md-6">
