--- a/src/views/store/order.ejs
+++ b/src/views/store/order.ejs
@@ -43,7 +43,7 @@
 							<input class="input" type="text" name="last-name" placeholder="Apellido">
 						</div>
 						<div class="form-group">
-							<input class="input" type="email" name="email" placeholder="Correo">
+							<input class="input" type="email" name="email" placeholder="ejemplo@gmail.com">
 						</div>
 						<div class="form-group">
 							<input class="input" type="text" name="address" placeholder="Dirección">
