Reseñas completado, cambio en boton de enviar y estilos en contact

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1939,6 +1939,7 @@ textarea.input {
 
 .reviews .review-body {
   min-height: 70px;
+  word-break: break-word;
 }
 
 .reviews .review-heading .name {
