--- a/src/views/store/contact.ejs
+++ b/src/views/store/contact.ejs
@@ -5,8 +5,8 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
+<body class="body-contact">
 <div class="contactos-page">
-<body>
     <!-- Start Content Page -->
     <div class="contenedor-principal bg-light py-5">
         <div class="col-md-6 m-auto text-center">
