--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,5 +1,6 @@
 /* contact.css */
 
+
 .contenedor-principal {
     display: flex;
     justify-content: center;
@@ -49,8 +50,6 @@ form .mb-3 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60vh;
-    padding: 20px;
 }
 
 .fila-formulario {
@@ -95,22 +94,19 @@ form .mb-3 {
 }
 
 .boton-enviar {
-    background-color: #28a745;
-    color: white;
     padding: 12px 30px;
     font-size: 16px;
     border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: background 0.3s ease;
+    background-color: #D10024;
+    border-radius: 40px;
+    color: #FFF;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: 0.2s all;
 }
 
 .boton-enviar:hover {
-    background-color: #218838;
-}
-
-.input-error {
-    border: 1px solid #ff4444 !important;
+    background-color: #e40b0b;
 }
 
 .field-error {
