--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -91,7 +91,13 @@ document.querySelector(".tablink").click();
                                             </h4></a>
                                         <div class="product-rating">
                                         <% for (let i = 1; i <= 5; i++) { %>
-                                            <i class="fa fa-star<%= i <= Math.round(producto.averageRating) ? '' : '-o' %>"></i>
+                                        <% if (i <= Math.floor(producto.averageRating)) { %>
+                                        <i class="fa fa-star"></i>
+                                        <% } else if (i - producto.averageRating < 1 && i > producto.averageRating) { %>
+                                        <i class="fa fa-star-half-o"></i>
+                                        <% } else { %>
+                                        <i class="fa fa-star-o"></i>
+                                        <% } %>
                                         <% } %>
                                         </div>
                                         <div class="product-btns">
@@ -148,7 +154,13 @@ document.querySelector(".tablink").click();
                                             </h4></a>
                                         <div class="product-rating">
                                         <% for (let i = 1; i <= 5; i++) { %>
-                                            <i class="fa fa-star<%= i <= Math.round(producto.averageRating) ? '' : '-o' %>"></i>
+                                        <% if (i <= Math.floor(producto.averageRating)) { %>
+                                        <i class="fa fa-star"></i>
+                                        <% } else if (i - producto.averageRating < 1 && i > producto.averageRating) { %>
+                                        <i class="fa fa-star-half-o"></i>
+                                        <% } else { %>
+                                        <i class="fa fa-star-o"></i>
+                                        <% } %>
                                         <% } %>
                                         </div>
                                         <div class="product-btns">
@@ -205,7 +217,13 @@ document.querySelector(".tablink").click();
                                             </h4></a>
                                         <div class="product-rating">
                                         <% for (let i = 1; i <= 5; i++) { %>
-                                            <i class="fa fa-star<%= i <= Math.round(producto.averageRating) ? '' : '-o' %>"></i>
+                                        <% if (i <= Math.floor(producto.averageRating)) { %>
+                                        <i class="fa fa-star"></i>
+                                        <% } else if (i - producto.averageRating < 1 && i > producto.averageRating) { %>
+                                        <i class="fa fa-star-half-o"></i>
+                                        <% } else { %>
+                                        <i class="fa fa-star-o"></i>
+                                        <% } %>
                                         <% } %>
                                         </div>
                                         <div class="product-btns">
@@ -262,7 +280,13 @@ document.querySelector(".tablink").click();
                                             </h4></a>
                                         <div class="product-rating">
                                         <% for (let i = 1; i <= 5; i++) { %>
-                                            <i class="fa fa-star<%= i <= Math.round(producto.averageRating) ? '' : '-o' %>"></i>
+                                        <% if (i <= Math.floor(producto.averageRating)) { %>
+                                        <i class="fa fa-star"></i>
+                                        <% } else if (i - producto.averageRating < 1 && i > producto.averageRating) { %>
+                                        <i class="fa fa-star-half-o"></i>
+                                        <% } else { %>
+                                        <i class="fa fa-star-o"></i>
+                                        <% } %>
                                         <% } %>
                                         </div>
                                         <div class="product-btns">
@@ -318,7 +342,13 @@ document.querySelector(".tablink").click();
                                             </h4></a>
                                         <div class="product-rating">
                                         <% for (let i = 1; i <= 5; i++) { %>
-                                            <i class="fa fa-star<%= i <= Math.round(producto.averageRating) ? '' : '-o' %>"></i>
+                                        <% if (i <= Math.floor(producto.averageRating)) { %>
+                                        <i class="fa fa-star"></i>
+                                        <% } else if (i - producto.averageRating < 1 && i > producto.averageRating) { %>
+                                        <i class="fa fa-star-half-o"></i>
+                                        <% } else { %>
+                                        <i class="fa fa-star-o"></i>
+                                        <% } %>
                                         <% } %>
                                         </div>
                                         <div class="product-btns">
@@ -437,7 +467,13 @@ document.querySelector(".tablink").click();
                                                     </h4></a>
                                                     <div class="product-rating">
                                                     <% for (let i = 1; i <= 5; i++) { %>
-                                                        <i class="fa fa-star<%= i <= Math.round(producto.averageRating) ? '' : '-o' %>"></i>
+                                                    <% if (i <= Math.floor(producto.averageRating)) { %>
+                                                    <i class="fa fa-star"></i>
+                                                    <% } else if (i - producto.averageRating < 1 && i > producto.averageRating) { %>
+                                                    <i class="fa fa-star-half-o"></i>
+                                                    <% } else { %>
+                                                    <i class="fa fa-star-o"></i>
+                                                    <% } %>
                                                     <% } %>
                                                     </div>
                                                     <div class="product-btns">
