--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -51,8 +51,8 @@
 				<% } %>
 			<% } %>
 			</div>
-			<a class="review-link" href="#reviews-section">
-			<%= producto.reviews.length %> Reseña(s)
+			<a class="review-link">
+			(<%= producto.totalReviews %>) Reseña(s)
 			</a>
 			</div>
 			<div>
