--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -115,9 +115,9 @@
                         <span class="copyright">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                            template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            <span id="year"></span> All rights reserved | This
+                            template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by
+                            <a href="https://colorlib.com" target="_blank">Colorlib</a>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </span>
                     </div>
@@ -127,20 +127,24 @@
             <!-- /container -->
         </div>
         <!-- /bottom footer -->
-    </footer>
-    <!-- /FOOTER -->
+        <script>
+            document.getElementById("year").innerText = new Date().getFullYear();
+        </script>
+        
+        </footer>
+        <!-- /FOOTER -->
 
-    <!-- jQuery Plugins -->
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/slick.min.js"></script>
-    <script src="/js/nouislider.min.js"></script>
-    <script src="/js/main.js" type="module"></script>
-    <script src="/js/search.js"></script>
-    <script src="/js/cart.js" type="module"></script>
-    <script src="/js/cartPreview.js" type="module"></script>
-    <script src="/js/fav.js" type="module"></script>
-    <script src="/js/nav.js"></script>
+        <!-- jQuery Plugins -->
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/slick.min.js"></script>
+        <script src="/js/nouislider.min.js"></script>
+        <script src="/js/main.js" type="module"></script>
+        <script src="/js/search.js"></script>
+        <script src="/js/cart.js" type="module"></script>
+        <script src="/js/cartPreview.js" type="module"></script>
+        <script src="/js/fav.js" type="module"></script>
+        <script src="/js/nav.js"></script>
 
 </body>
 </html>
