Actualizando db y corrigiendo error de calculo de rating

--- a/src/views/store/product.ejs
+++ b/src/views/store/product.ejs
@@ -223,7 +223,7 @@
 											distribution[item.calificacion] = item.count;
 										});
 										
-										const totalReviews = producto.reviews.length;
+										const totalReviews = producto.totalReviews;
 										%>
 										
 										<% for(let stars = 5; stars >= 1; stars--) { %>
